objects/Lead/fields/Latest_Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Latest_Salary_Range__c</fullName>
    <label>Latest Salary Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;= HK$10,000</fullName>
            </value>
            <value>
                <fullName>HK$10,001-HK$24,999</fullName>
            </value>
            <value>
                <fullName>HK$25,000-HK$49,999</fullName>
            </value>
            <value>
                <fullName>>=HK$50,000 "</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>